<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_margin="6dp"
        android:background="@drawable/bg_balao"
        android:backgroundTint="@color/balaoRemetente"
        android:orientation="vertical"
        tools:targetApi="lollipop">

        <TextView
            android:id="@+id/textNomeExibicao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/paulo_dantas"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageMensagemFoto"
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:contentDescription="@string/mensagem"
            app:srcCompat="@drawable/padrao" />

        <TextView
            android:id="@+id/textMensagemTexto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/foto"
            android:textSize="18sp" />
    </LinearLayout>

</RelativeLayout>